Fixing create demo script